Test/git-issues/git-issue-288.dfy
module A {
  type T = int
}

module B refines A {
  type T = int
}
